--- a/visualizations/manifest.json
+++ b/visualizations/manifest.json
@@ -1,14 +1,14 @@
 {
-  "mycompany": {
-    "title": "[DISPLAY_NAME]",
-    "website": "[WEBSITE_URL]",
-    "logo": "[LOGO_URL]",
+  "0-Solver-0": {
+    "title": "",
+    "website": "https://github.com/0-Solver-0",
+    "logo": "https://avatars2.githubusercontent.com/u/22687178?v=3",
     "visualizations": {
 
 
       "list": {
           "license": "MIT",
-          "website": "[INFO_URL]",
+          "website": "https://github.com/0-Solver-0",
           "versions": {
             "1.0.0": {
               "simple": {
